<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="yellow_but">Yellow</string>
    <string name="green_but">Green</string>
    <string name="blue_but">Blue</string>
    <string name="how_to_play">How to play</string>
    <string name="rules">Tap on view to change color</string>
</resources>
